<resources>
    <string name="app_name">NAME_PLACE_ANIMAL_THING</string>
    <string name="alpla_a">A</string>
    <string name="alpha_c">C</string>
    <string name="alplha_f">F</string>
    <string name="alpha_y">Y</string>
    <string name="alpha_u">U</string>
    <string name="alpha_o">O</string>
    <string name="alpha_q">Q</string>
    <string name="alpha_x">X</string>
    <string name="alpha_z">Z</string>
</resources>
